# OpenForge

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASING.md  comp.out  lvs.json  mkdocs.yml  openforge.yaml.example  pyproject.toml
.github/workflows/: ci.yml  release-signoff.yml  release.yml
docker/: .env.example  docker-compose.dev.yml  docker-compose.yml
docker/api/: Dockerfile
docker/base/: Dockerfile
docker/web/: Dockerfile
docker/worker/: Dockerfile
docs/: changelog.md  contributing.md  index.md  openlane.md
docs/api/: README.md  index.md
docs/architecture/: README.md
docs/cli/: README.md  index.md
docs/crypto/: README.md
docs/getting-started/: first-project.md  installation.md  quickstart.md
docs/guide/: activity-bar.md  code-editor.md  constraints.md  flow-navigator.md  pin-planner.md  project-structure.md
docs/panels/: fpga.md  overview.md  pcb.md  physical.md  signoff.md  synthesis.md  timing.md  verification.md
docs/stylesheets/: extra.css
docs/tutorials/: analog.md  asic-flow.md  fpga-flow.md  pcb-flow.md  verification.md
examples/: README.md
examples/aes-sbox/: openforge.yaml
examples/aes-sbox/constraints/: timing.sdc
examples/aes-sbox/sim_build/: aes_sbox_tb.vvp
examples/asic-caravel-mgmt-sky130/: README.md  SIGNOFF_REPORT.md  openforge.yaml
examples/asic-caravel-sky130/: README.md  SIGNOFF_REPORT.md  openforge.yaml
examples/asic-counter-gf180/: README.md  openforge.yaml
examples/asic-counter-ihp-sg13g2/: README.md  openforge.yaml
examples/asic-counter-sky130/: README.md  openforge.yaml
examples/asic-picorv32-sky130/: README.md  SIGNOFF_REPORT.md  openforge.yaml
examples/formal-fifo-proof/: README.md  fifo.sby  openforge.yaml
examples/fpga-blinky-icebreaker/: README.md  openforge.yaml
examples/ml-kem-accelerator/: openforge.yaml
examples/pcb-breakout-board/: README.md  openforge.yaml
examples/sha3-keccak/: openforge.yaml
examples/simple-counter/: Hopenforgeexamplessimple-countersim_buildcounter_tb.vvp  openforge.yaml  pnr_run.tcl  sim_buildcounter_tb.vvp  sta_run.tcl
examples/spi-master/: openforge.yaml
examples/spice-opamp-tia/: README.md  openforge.yaml
examples/uart-tx/: openforge.yaml
examples/uart-tx/src/: uart_tx.v
installer/: Dockerfile  Dockerfile.release  README.md  build_all.py  build_linux.py  build_macos.py  build_windows.py  docker-compose.yml  generate_docs.py  launch_cli.bat  launch_desktop.bat  openforge.spec  openforge_setup.iss  release.py
installer/conda/: bld.bat  build.sh  meta.yaml
installer/linux/: openforge-eda.desktop
installer/macos/: Info.plist  create_dmg.sh  entitlements.plist
installer/scripts/: install.ps1  install.sh
installer/windows/: build_msi.ps1  openforge.wxs
scripts/: install.ps1  install.sh  run_caravel_flow.py
share/formal/: crypto_properties.sv
share/ip/: catalog.yaml
share/templates/: crypto_verify.sby
test_project/: e60fcbdc_project_summary.html
tests/e2e/: test_full_flow.py  test_signoff_tools.py
tests/unit/: test_config.py  test_crypto.py  test_fips.py  test_ntt.py  test_pdk.py  test_synthesis.py  test_waveform.py  test_workflow.py
tools/: dump_dock_names.py  gui_flow_test.py  probe.py  probe2.py  screenshot_all.py  smoke.py  ui_audit.py  ui_audit2.py  ui_audit3.py  ui_audit_report.txt
tools/openforge-ct/: Cargo.toml
tools/openforge-ct/src/: control_flow.rs  formal_gen.rs  lib.rs  main.rs  taint.rs
tools/openforge-drc/: Cargo.toml  README.md
tools/openforge-drc/src/: lib.rs  main.rs  rdb.rs  violation.rs
tools/openforge-drc/src/checks/: area.rs  density.rs  derived.rs  enclosure.rs  mod.rs  notch.rs  overhang.rs  separation.rs  space.rs  width.rs
tools/openforge-drc/src/gds/: mod.rs  reader.rs
tools/openforge-drc/src/geom/: mod.rs  ops.rs  polygon.rs
tools/openforge-drc/src/rules/: ast.rs  mod.rs  parser.rs
tools/openforge-drc/src/rules/drx/: interpreter.rs  lexer.rs  mod.rs  parser.rs  stdlib.rs
tools/openforge-drc/tests/: counter_smoke.rs  drx_extended.rs  drx_lexer.rs  drx_parser.rs  drx_real_sky130.rs  gf180.rs  ihp_sg13g2.rs  integration.rs  phase2.rs
tools/openforge-drc/tests/fixtures/: density.drc  drx_extended.drc  enclosure.drc  gf180mcu_subset.drc  ihp_sg13g2_subset.drc  simple.drc  sky130_subset.drc
tools/openforge-entropy/: Cargo.toml
tools/openforge-entropy/src/: main.rs
tools/openforge-lint/: Cargo.toml
tools/openforge-lint/src/: main.rs
tools/openforge-lvs/: Cargo.toml  README.md  lvs.json
tools/openforge-lvs/src/: error.rs  lib.rs  main.rs  report.rs
tools/openforge-lvs/src/graph/: builder.rs  hierarchical.rs  mod.rs  normalize.rs
tools/openforge-lvs/src/layout_extract/: connectivity.rs  def_reader.rs  lef_reader.rs  mod.rs
tools/openforge-lvs/src/matcher/: mod.rs  vf2.rs
tools/openforge-lvs/src/spice/: ast.rs  mod.rs  parser.rs
tools/openforge-lvs/src/verilog/: mod.rs  parser.rs
tools/openforge-lvs/tests/: gf180.rs  ihp_sg13g2.rs  integration.rs  integration_layout_extract.rs  phase3_hierarchical.rs  phase3_normalize.rs
tools/openforge-lvs/tests/fixtures/: inv_bad.spice  inv_lay.spice  inv_sch.spice  rdiv_lay.spice  rdiv_sch.spice
tools/openforge-sca/: Cargo.toml
tools/openforge-sca/src/: main.rs
tools/openforge-wave/: Cargo.toml
tools/openforge-wave/src/: fst.rs  json_export.rs  lib.rs  main.rs  vcd.rs
tools/openforge-xrc/: Cargo.toml  README.md
tools/openforge-xrc/src/: error.rs  lib.rs  main.rs
tools/openforge-xrc/src/def/: ast.rs  mod.rs  parser.rs
tools/openforge-xrc/src/extract/: capacitance.rs  coupling.rs  cross_layer.rs  mod.rs  pattern_match.rs  resistance.rs
tools/openforge-xrc/src/extract/patterns/: mod.rs
tools/openforge-xrc/src/lef/: mod.rs  parser.rs
tools/openforge-xrc/src/spef/: mod.rs  writer.rs
tools/openforge-xrc/src/tech/: ast.rs  gf180mcu.rs  ihp_sg13g2.rs  mod.rs  sky130.rs
tools/openforge-xrc/tests/: cap_sanity.rs  gf180.rs  ihp_sg13g2.rs  integration.rs  phase3.rs  sky130_lef.rs
tools/openforge-xrc/tests/fixtures/: cross_layer.def  empty.def  multicut_via.def  tiny.def  tiny.lef  via.def
(+127 files in other folders)
