[workspace]
resolver = "2"
members = [
    "tools/openforge-ct",
    "tools/openforge-sca",
    "tools/openforge-entropy",
    "tools/openforge-lint",
    "tools/openforge-wave",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Dyber Inc. <engineering@dyber.io>"]
repository = "https://github.com/dyber-pqc/OpenForge"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sv-parser = "0.13"
pyo3 = { version = "0.22", features = ["extension-module"] }
rayon = "1"
