[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openforge-eda"
version = "0.1.0"
description = "Free, open-source EDA platform for ASIC, FPGA, and PCB design"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.12"
authors = [{name = "Dyber, Inc."}]
keywords = ["eda", "asic", "fpga", "pcb", "verilog", "synthesis", "openroad", "yosys"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "numpy>=1.24",
    "PySide6>=6.6",
    "jinja2>=3.1",
    "networkx>=3.0",
    "rich>=13.0",
    "typer[all]>=0.12",
]

[project.optional-dependencies]
full = ["matplotlib", "scipy", "requests", "docker>=7.0"]
dev = ["pytest", "ruff", "mypy", "pytest-cov"]
docs = ["mkdocs-material"]

[project.scripts]
openforge = "openforge_cli.main:app"
openforge-desktop = "openforge_desktop.main:main"

[project.urls]
Homepage = "https://openforge.dev"
Documentation = "https://docs.openforge.dev"
Repository = "https://github.com/openforge/openforge"

[tool.hatch.build.targets.wheel]
packages = [
    "packages/core/src/openforge",
    "packages/cli/src/openforge_cli",
    "packages/desktop/src/openforge_desktop",
]

# ---------------------------------------------------------------------------
# uv workspace (used for local development; does not affect pip installs)
# ---------------------------------------------------------------------------
[tool.uv.workspace]
members = [
    "packages/core",
    "packages/cli",
    "packages/api",
    "packages/desktop",
    "packages/crypto",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["openforge", "openforge_cli", "openforge_api", "openforge_desktop", "openforge_crypto"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
