[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openforge-eda"
version = "0.1.0"
description = "Free, open-source EDA platform for ASIC, FPGA, and PCB design"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.12"
authors = [{name = "Dyber, Inc."}]
keywords = ["eda", "asic", "fpga", "pcb", "verilog", "synthesis", "openroad", "yosys"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "numpy>=1.24",
    "PySide6>=6.6",
    "jinja2>=3.1",
    "networkx>=3.0",
    "rich>=13.0",
    "typer[all]>=0.12",
]

[project.optional-dependencies]
full = ["matplotlib", "scipy", "requests", "docker>=7.0"]
dev = ["pytest", "ruff", "mypy", "pytest-cov"]
docs = ["mkdocs-material"]

[project.scripts]
openforge = "openforge_cli.main:app"
openforge-desktop = "openforge_desktop.main:main"

[project.urls]
Homepage = "https://openforge.dev"
Documentation = "https://docs.openforge.dev"
Repository = "https://github.com/openforge/openforge"

[tool.hatch.build.targets.wheel]
packages = [
    "packages/core/src/openforge",
    "packages/cli/src/openforge_cli",
    "packages/desktop/src/openforge_desktop",
]

# ---------------------------------------------------------------------------
# uv workspace (used for local development; does not affect pip installs)
# ---------------------------------------------------------------------------
[tool.uv.workspace]
members = [
    "packages/core",
    "packages/cli",
    "packages/api",
    "packages/desktop",
    "packages/crypto",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "A", "SIM"]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E701",   # multiple statements on one line (used in compact Qt event handlers)
    "E702",   # semicolon-separated statements
    "E741",   # ambiguous variable name (l, I, O common in EDA)
    "F401",   # unused imports (many are re-exports for __init__.py)
    "B008",   # function call in default arg (Typer uses this pattern)
    "B904",   # raise without from (noisy in existing code)
    "A002",   # shadowing builtins (id, type used as EDA field names)
    "SIM102", # collapsible-if (readability preference)
    "SIM105", # suppressible-exception (contextlib.suppress vs try/except)
    "SIM108", # if-else-block-instead-of-if-exp
    "E402",   # module-import-not-at-top (guarded/conditional imports)
    "B007",   # unused loop variable (common in Qt signal lambdas)
    "B017",   # assert-raises-exception
    "B018",   # useless-expression
    "B023",   # function-uses-loop-variable (lambda capture in loops)
    "UP031",  # printf-string-formatting
    "F821",   # undefined-name (false positives on type annotations with string literals)
    "F823",   # undefined-local (false positive on module-level sets)
]

[tool.ruff.lint.isort]
known-first-party = ["openforge", "openforge_cli", "openforge_api", "openforge_desktop", "openforge_crypto"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
