[package]
name = "openforge-ct"
description = "Constant-time analysis tool for cryptographic RTL"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sv-parser = { workspace = true }
rayon = { workspace = true }

[lib]
name = "openforge_ct"
path = "src/lib.rs"

[[bin]]
name = "openforge-ct"
path = "src/main.rs"
