[package]
name = "openforge-drc"
description = "OpenForge DRC engine — fast Rust-based design rule checker"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
rayon = { workspace = true }
gds21 = "3.0.0-pre.2"
geo = "0.30"
geo-types = "0.7"
rstar = "0.12"
quick-xml = "0.38"
nom = "8"

[lib]
name = "openforge_drc"
path = "src/lib.rs"

[[bin]]
name = "openforge-drc"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"
