[package]
name = "openforge-entropy"
description = "Entropy flow analyzer for QRNG/TRNG integration verification"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sv-parser = { workspace = true }

[[bin]]
name = "openforge-entropy"
path = "src/main.rs"
