[package]
name = "openforge-lint"
description = "Fast RTL linting engine for OpenForge EDA"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sv-parser = { workspace = true }
rayon = { workspace = true }

[[bin]]
name = "openforge-lint"
path = "src/main.rs"
